--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "gray-matter": "^4.0.3",
