--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
     "next": "15.3.4",
+    "next-sitemap": "^4.2.3",
     "openai": "^6.0.0",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
