--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
