--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "dotenv": "^17.2.3",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
-    "next": "15.3.4",
+    "next": "^15.5.6",
     "next-sitemap": "^4.2.3",
     "openai": "^6.0.0",
     "papaparse": "^5.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +32,6 @@
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
