--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.563.0",
     "marked": "^12.0.2",
     "next": "^16.0.7",
     "next-sitemap": "^4.2.3",
